--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -16,6 +16,7 @@ body {
     font-weight: 300;
     color: white;
     line-height: 1.5;
+    background-image: url(../img/BG-Zero-Aura.png);
 }
 
 a {
